# Xiangqi3D-OpenGL

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: basic.frag  basic.vert  line.frag  line.vert  shadow.frag  shadow.vert  text.frag  text.vert
include/: Camera.hpp  Config.hpp  Mesh.hpp  Model.hpp  Primitives.hpp  Renderer.hpp  Shader.hpp  TextRenderer.hpp  Texture.hpp  Types.hpp  Util.hpp  XiangqiGame.hpp  XiangqiRules.hpp
src/: Camera.cpp  Mesh.cpp  Model.cpp  Primitives.cpp  Renderer.cpp  Shader.cpp  TextRenderer.cpp  Texture.cpp  XiangqiGame.cpp  XiangqiRules.cpp  main.cpp
